--- a/nextjs-gihyo-book/package.json
+++ b/nextjs-gihyo-book/package.json
@@ -53,6 +53,7 @@
     "eslint": "^8.23.1",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
